# fission-play

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  endpoints.md  main.py  openapi.json  pyproject.toml
backend/app/: main.py  users.py
backend/app/db/: database.py  seed.py  transform_frontend_mock_data.py
backend/app/db/mongo_import/: id_map.json  teamStats.json
backend/app/models/: games.py  officer_request.py  players.py  stat_submissions.py  team_stats.py  teams.py  users.py
backend/app/routes/: auth.py  games.py  officer_requests.py  players.py  stat_submissions.py  teams.py
backend/app/tests/: conftest.py  test_auth.py  test_games.py  test_players.py
backend/auth/: auth_models.py  auth_role.py  auth_routes.py  auth_user.py
backend/db/: database.py  main.py  seed.py
frontend/: package-lock.json  package.json
frontend/src/: App.css
frontend/src/api/: stats.ts  teams.ts
frontend/src/assets/: wcsHero.avif
frontend/src/components/: ClubCard.tsx  Navbar.tsx  SearchBar.tsx  TeamCard.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AdminDashboard.tsx  ClubDashboard.tsx  ClubDetail.tsx  ForgotPassword.tsx  Home.tsx  PlayerDetail.tsx  PlayerProfile.tsx  RequestSubmitted.tsx  SignIn.tsx  SignUp.tsx  SubmitStats.tsx  TeamDashboard.tsx  TeamProfile.tsx  Unauthorized.tsx
frontend/src/routes/: AppRoutes.tsx
frontend/src/services/: ScheduleService.ts  TeamStatsService.ts  searchService.ts
frontend/src/types/: club.ts  gameEvent.ts  teamProfile.ts  (+1 more)
(+5 files in other folders)
