[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "fastapi-users[beanie]>=15.0.5",
    "fastapi[standard]>=0.129.0",
    "pymongo>=4.15.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]
